--- a/docker/go-dev/dockerfile
+++ b/docker/go-dev/dockerfile
@@ -17,10 +17,9 @@ RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" \
     && chmod -R 777 "$GOPATH" \
     && chmod +x /entrypoint.sh
 
-RUN go get github.com/tockins/realize
+RUN go get github.com/oxequa/realize
 
 WORKDIR $GOPATH
 ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["realize", "start"]
-# CMD ["/bin/bash", "-x", "realize", "start"]
