--- a/docker/go-prod/dockerfile
+++ b/docker/go-prod/dockerfile
@@ -7,8 +7,8 @@ RUN apk update && apk add git
 # Create appuser
 RUN adduser -D -g '' gmaxusr
 
-COPY . $GOPATH/src/github.com/mxgn/url-shrntr/
-WORKDIR $GOPATH/src/github.com/mxgn/url-shrntr/
+COPY . $GOPATH/src/github.com/mxgn/url-shrntr/app
+WORKDIR $GOPATH/src/github.com/mxgn/url-shrntr/app
 
 #get dependancies
 #you can also use dep
