--- a/app/.realize.yaml
+++ b/app/.realize.yaml
@@ -3,27 +3,27 @@ settings:
     force: true
     interval: 0s
 server:
-  status: false
+  status: true
   open: false
   port: 5002
   host: localhost
 schema:
-- name: app
-  path: .
-  commands:
-    run:
-      status: true
-  watcher:
-    paths:
-    - /
-    # - ./../common
-    extensions:
-    - go
-    - html
-    - css
-    - js
-    - yaml
-    ignored_paths:
-    - .git
-    - .realize
-    - vendor
+  - name: app
+    path: .
+    commands:
+      run:
+        status: true
+    watcher:
+      paths:
+        - /
+        - ./../common
+      extensions:
+        - go
+        - html
+        - css
+        - js
+        - yaml
+      ignored_paths:
+        - .git
+        - .realize
+        - vendor
