--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,24 @@ services:
     container_name: "app"
     build: "./docker/go-dev"
     ports:
-      - 80:8080
+      - 80:80
       - 5002:5002
     volumes:
       - .:${GO_PROJECT_DIR}
       - $GOPATH/src:/go/src
+      - ./www:/var/www
     links:
       - pgdb
     environment:
-      PORT: 8080
+      ENVIRONMENT: PROD
+      PORT: 80
       # REDIS_URL: redis:6379
       GO_WORK_DIR: ${GO_PROJECT_DIR}/app
-      PG_URL: pgdb:5432
+      PG_HOST: pgdb
+      PG_PORT: 5432
+      PG_USER: postgres
+      PG_DBNAME: pgdb
+      # PG_PASS: pguser
 
   # redis:
   #   container_name: redis
