--- a/docker/go-prod/dockerfile
+++ b/docker/go-prod/dockerfile
@@ -7,9 +7,16 @@ RUN apk update && apk add git
 # Create appuser
 RUN adduser -D -g '' gmaxusr
 
-COPY . $GOPATH/src/github.com/mxgn/url-shrntr/app
-WORKDIR $GOPATH/src/github.com/mxgn/url-shrntr/app
+# COPY . $GOPATH/src/github.com/mxgn/url-shrtnr
+# WORKDIR $GOPATH/src/github.com/mxgn/url-shrtnr/app
 
+
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
+
+RUN go get github.com/mxgn/url-shrtnr
+
+WORKDIR $GOPATH/src/github.com/mxgn/url-shrtnr/app
 #get dependancies
 #you can also use dep
 RUN go get -d -v
