--- a/docker/go-prod/dockerfile
+++ b/docker/go-prod/dockerfile
@@ -31,6 +31,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflag
 FROM scratch
 
 COPY --from=builder /etc/passwd /etc/passwd
+COPY --from=builder /go/src/github.com/mxgn/url-shrtnr/www /var/www
 
 # Copy our static executable
 COPY --from=builder /go/bin/url-shrntr-test /go/bin/url-shrntr-test
