--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,14 @@ services:
     links:
       - pgdb
     environment:
-      PORT: 8080
-      STATIC_DIR: /var/www/
       GO_WORK_DIR: ${GO_PROJECT_DIR}/app
-      PG_HOST: pgdb
-      PG_PORT: 5432
-      PG_USER: postgres
-      PG_DBNAME: pgdb
+      APP_PORT: 8080
+      APP_EXEC_DIR: ${GO_PROJECT_DIR}/app
+      APP_STATIC_DIR: /var/www/
+      APP_PG_HOST: pgdb
+      APP_PG_PORT: 5432
+      APP_PG_USER: postgres
+      APP_PG_DBNAME: pgdb
 
   pgdb:
     container_name: pgdb
